# cur

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: 00-globals.r  cur-package.r  device_management.r  memory_management.r  smi.r  zzz-highlevel.r
inst/include/: cur.h
man/: cur-package.Rd  device_management.Rd  memory_management.Rd  smi.Rd
src/: Makevars.in  check.hh  cur_native.c  device_management.cu  memory_management.cu
